--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.11",
+    "@angular-devkit/architect": "19.2.12",
+    "@angular-devkit/build-angular": "^19.2.12",
+    "@angular-devkit/core": "^19.2.12",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
