--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
